--- a/app/templates/check.html
+++ b/app/templates/check.html
@@ -9,13 +9,13 @@
 {{ check.question }} 
 
 <br>
-<ul class="list-unstyled"> 
+<h3><ul class="list-unstyled"> 
     <li>    (A) {{check.option1}}  </li>
     <li>    (B) {{check.option2}}  </li>
     <li>    (C) {{check.option3}}  </li>
     <li>    (D) {{check.option4}}  </li>
 </ul>
-
+</h3>
 
 <div class="col-md-4">
     <div class="row">
