--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -77,7 +77,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading"> Start Today</h2>
-                    <p class="lead"> You can test yourself, see your progress, and improve!. </p>
+                    <p class="lead"> You can test yourself, see your progress, and improve! </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
 
