change title, add category

--- a/app/templates/adminquestions.html
+++ b/app/templates/adminquestions.html
@@ -14,6 +14,7 @@
             <th> question id </th>
 
             <th> question </th>
+            <th> category </th>
             <th> choice A </th>
             <th> choice B </th>
             <th> choice C </th>
@@ -27,6 +28,8 @@
         <tr>
 
             <td> {{ i.questionid }} </td>
+            
+            <td> {{ i.category }} </td>
             <td> {{ i.question }} </td>
 
             <td> {{ i.option1}} </td>
