--- a/app/templates/check.html
+++ b/app/templates/check.html
@@ -2,7 +2,7 @@
 {% import "_macros.html" as macros %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Quiz - {{ user.username }}{% endblock %}
+{% block title %} Question {{ user.username }}{% endblock %}
 
 {% block page_content %}
 
