--- a/app/templates/upgrade.html
+++ b/app/templates/upgrade.html
@@ -34,8 +34,8 @@
             <div class="panel-body">
                 <ul>
                 <li> Access to additional quizzes.
-                <li> Ability to save up to 200 scores and see your progress.
-                <li> Ability to delete past scores.
+                <li> Ability to save up to 20 scores and see your progress.
+                <li> Unlimited ability to delete your past scores.
                 <li> Currently, $2 US for two months of access.
                 </ul>
             </div>
