change color of heading on learn.html

--- a/app/templates/learn.html
+++ b/app/templates/learn.html
@@ -4,7 +4,8 @@
 
 {% block page_content %}
 
-<h2 class="text-center"> Practice! </h2>
+<div class="learn">
+<h1 class="text-center"> Practice makes perfect. </h1></div>
 <br>
 <br>
 
@@ -12,7 +13,7 @@
 <br>
 <br>
 
-<h2 class="text-center"> Free </h2>
+<h2 > Free </h2>
 
   <div class="panel panel-default">
     <div class="panel-body">
@@ -45,7 +46,7 @@
 <br>
 <br>
 
-<h2 class="text-center"> Upgraded Membership Required </h2>
+<h2> Upgraded Membership Required </h2>
 <br>
 <br>
 
