--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -16,6 +16,13 @@
         <h3> <li> How is my payment processed? </h3> </li>
         Payments are processed by <a href="https://stripe.com/"> Stripe </a> @ stripe.com.
         
+
+        <h3> <li> How long is my account valid? </h3> </li>
+        Currently, free accounts will be supported as long as this site is open. The $2 charge is a one-time charge. If you would like to continue your membership afer two months, you will have to sign up again and pay the fee again. The fees are used for server support and maintenance.
+
         <h3> <li> I am having trouble with upgrading my membership. Who should I contact? </h3> </li>
         Please contact us at: <a href="mailto:koreanlevelup@gmail.com"> koreanlevelup@gmail.com </a>
+
+        <h3> <li> I would like additional vocab. practice </h3> </li>
+        If there is sufficient demand, more may be added. Please contact us at: <a href="mailto:koreanlevelup@gmail.com"> koreanlevelup@gmail.com </a> if you have any requests or suggestions for future vocab. sections.
 {% endblock %}
