--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -18,7 +18,7 @@
         
 
         <h3> <li> How long is my account valid? </h3> </li>
-        Free accounts will be supported as long as this site is open. The $2 charge is a one-time charge. If you would like to continue your membership after two months, please sign up again and pay the fee again. The fees are used for server hosting and web maintenance.
+        Basic accounts will be supported as long as this site is open. The $2 charge for upgraded accounts is paid as a one-time charge. If you would like to continue your membership after two months, please sign up again and pay the fee again. The fees are used for server hosting and web maintenance.
 
         <h3> <li> I am having trouble with upgrading my membership. Who should I contact? </h3> </li>
         Please contact us at: <a href="mailto:koreanlevelup@gmail.com"> koreanlevelup@gmail.com </a>
