allow free users to delete

--- a/app/templates/upgrade.html
+++ b/app/templates/upgrade.html
@@ -20,7 +20,7 @@
             <div class="panel-body">
                 <ul>
                 <li> Access to 2 free quizzes.
-                <li> 5 tries for each quiz.
+                <li> Ability to save and delete 5 scores.
                 </ul>
             </div>
             <div class="panel-footer"><h3> Free </h3></div>
