add option to learn page for money

--- a/app/templates/learn.html
+++ b/app/templates/learn.html
@@ -110,6 +110,12 @@
           </div>
         </div>
 
+        <div class="col-md-3">
+          <div class="panel panel-default my_panel">
+            <div class="panel-body"><img class="img-responsive" src="{{url_for('static', filename='money.jpg')}}"/></div>
+            <div class="panel-footer"><h3><a href="{{url_for('main.money')}}"> Money </a></h3></div>
+          </div>
+        </div>
 
 
 
