add link for colors

--- a/app/templates/learn.html
+++ b/app/templates/learn.html
@@ -118,6 +118,12 @@
         </div>
 
 
+        <div class="col-md-3">
+          <div class="panel panel-default my_panel">
+            <div class="panel-body"><img class="img-responsive" src="{{url_for('static', filename='colors.jpg')}}"/></div>
+            <div class="panel-footer"><h3><a href="{{url_for('main.colors')}}"> Colors </a></h3></div>
+          </div>
+        </div>
 
       </div>
     </div>
