--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -14,7 +14,7 @@
         Currently, this site only supports gravatars. You can change your gravatar at the <a href="http://gravatar.com"> Gravatar site.</a>
 
         <h3> <li> How is my payment processed? </h3> </li>
-        Payments are processed by <a href="https://stripe.com/"> Stripe </a> @ stripe.com.
+        Payments are processed by <a href="https://stripe.com/"> Stripe </a> @ stripe.com. There are no cancellations or refunds. 
         
 
         <h3> <li> How long is my account valid? </h3> </li>
@@ -25,4 +25,8 @@
 
         <h3> <li> Do you have plans for additional vocab. categories? </h3> </li>
         If there is sufficient demand, more may be added. Feel free to contact us at: <a href="mailto:koreanlevelup@gmail.com"> koreanlevelup@gmail.com </a> if you have any requests or suggestions.
+
+        <h3> <li> Is there any fine print? What is your terms of service? </h3> </li>
+        We will not share your email or personal information with anyone else. We're commited to keeping the site up as long as there is interest, but are not liable in case there is server downtime or other circumstances. There may be occasional very short periods of downtime during server maintenance. Your data if protected through HTTPS and SSL, but we are not liable for any problems related to stripe payment processing. We try to keep everything as accurate as possible, but can't be held responsible for any errors in the website.
+
 {% endblock %}
